--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,4 @@
-<h2>Employee Dashboard</h2>
+<h2>Dashboard</h2>
 <div>
   <h3 style="float: left;margin-left: 20px;">Total Count = {{dataSource.data.length}} </h3>
   <div class="right">
@@ -13,20 +13,20 @@
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="employee_name">
-      <th mat-header-cell *matHeaderCellDef> employee_name </th>
-      <td mat-cell *matCellDef="let element"> {{element.employee_name}} </td>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> name </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="employee_salary">
-      <th mat-header-cell *matHeaderCellDef> employee_salary </th>
-      <td mat-cell *matCellDef="let element"> {{element.employee_salary}} </td>
+    <ng-container matColumnDef="class_name">
+      <th mat-header-cell *matHeaderCellDef> class_name </th>
+      <td mat-cell *matCellDef="let element"> {{element.class_name}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="employee_age">
-      <th mat-header-cell *matHeaderCellDef> employee_age </th>
-      <td mat-cell *matCellDef="let element"> {{element.employee_age}} </td>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef> type </th>
+      <td mat-cell *matCellDef="let element"> {{element.type}} </td>
     </ng-container>
 
     <!-- Symbol Column -->
