--- a/src/app/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
+++ b/src/app/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
@@ -2,7 +2,7 @@
 
 <mat-dialog-content>
 
-<p> Id-{{content.id}} <br> Name-{{content.name}}<br>Price-{{content.price}}<br>Quantity-{{content.quantity}}</p>
+<p> Id-{{content.id}} <br> First Name-{{content.first_name}}<br>Last Name-{{content.last_name}}<br>Email-{{content.email}}</p>
 </mat-dialog-content>
 
 <mat-dialog-actions>
