--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -12,9 +12,9 @@
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <ng-container matColumnDef="first_name">
+      <th mat-header-cell *matHeaderCellDef> first_name </th>
+      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
     </ng-container>
 
    
@@ -23,14 +23,14 @@
       <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container> -->
 
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> price </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+    <ng-container matColumnDef="last_name">
+      <th mat-header-cell *matHeaderCellDef> last_name </th>
+      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef> quantity </th>
-      <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
   
      <ng-container matColumnDef="action">
