--- a/src/app/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
+++ b/src/app/dialog-overview-example-dialog/dialog-overview-example-dialog.component.html
@@ -16,7 +16,7 @@
 
 <!-- add -->
 <div *ngIf="isAdd">  
-    <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="profileForm">
   
         <label>
           id:
