--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,50 +1,59 @@
-<h2>Dashboard</h2>
-<div>
-  <h3 style="float: left;margin-left: 20px;">Total Count = {{dataSource.data.length}} </h3>
-  <div class="right">
-    
-    <button mat-raised-button color="primary" (click)="openDialog('Add','Add')">Add</button></div>
-  <table mat-table [dataSource]="dataSource" [trackBy]="trackById">
-    
-  
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> id </th>
-      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
 
-    <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> first_name </th>
-      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
-    </ng-container>
+<div class="container"> 
+  <div class="row"> 
+    <div class="col-sm-12 col-md-12 col-lg-12 m-top"> <h1 class="heading">Demo Data Table</h1></div>   
+    <div class="col-sm-12 col-md-12 col-lg-12 m-bottom">   
+      <h3>Total Count = {{dataSource.data.length}} </h3> 
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+      </mat-form-field>
+      <div class="example-container mat-elevation-z8">
+      
+        <table mat-table [dataSource]="dataSource" matSort >
+      
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header> id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="first_name">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header> first_name </th>
+            <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="last_name">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header> last_name </th>
+            <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header> email </th>
+            <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+          </ng-container>
+          
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef> Action </th>
+            <td mat-cell *matCellDef="let element"> 
+              <mat-icon  (click)="openDialog('Edit',element)">edit</mat-icon>
+              <mat-icon  (click)="openDialog('Delete',element)">delete</mat-icon>
+             </td>
+          </ng-container>
 
-   
-    <!-- <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container> -->
 
-    <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> last_name </th>
-      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-  
-     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element"> 
-        <mat-icon  (click)="openDialog('Edit',element)">edit</mat-icon>
-        <mat-icon  (click)="openDialog('Delete',element)">delete</mat-icon>
-       </td>
-    </ng-container>
-    
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns,sticky: true"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-12 "><button class="btn-width" mat-raised-button color="primary" (click)="openDialog('Add','Add')">Add</button> </div> 
+    <div class="col-sm-12 col-md-12 col-lg-12 m-top-50 txt-center"> 
+      <a pageScroll target="_blank" href="https://github.com/tarunmeena512/Agular-9-DemoApp">Click here for-GitHub Repository</a>
+    </div>
+  </div>
 </div>
+
+
+
 
