--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,9 +1,6 @@
 h2{
     margin-left: 50%;
 }
-table {
-    width: 100%;
-  }
   .mrgin{
  margin-right: 16px;
   }
@@ -12,4 +9,40 @@ table {
     float: right;
     margin-right: 20px;
 }
+
+table {
+    width: 100%;
+  }
+  
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+  .example-container {
+    height: 300px;
+    overflow: auto;
+  }
+.heading{
+  color: lightseagreen;
+  text-align: center;
+}
+.m-bottom{
+  margin-bottom: 10px;
+}
+.txt-align{
+  text-align: center;
+}
+.m-top{
+  margin-top: 10px;
+}
+.txt-center{
+  text-align: center;
+}
+.txt-right{
+    text-align: right;
+}
+.btn-width{
+    width: inherit;
+}
+  
   
