--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -19,8 +19,7 @@ table {
     width: 100%;
   }
   .example-container {
-    height: 300px;
-    overflow: auto;
+    
   }
 .heading{
   color: lightseagreen;
@@ -44,5 +43,7 @@ table {
 .btn-width{
     width: inherit;
 }
-  
+.txt-center{
+  text-align: center;
+}
   
