--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
+
+.mat-card-header-text {
+  width: 100% !important;
+    text-align: center !important;
+}
