--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,26 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 m-top">
+        <div 
+    
+        class="col-sm-12 col-md-12 col-lg-12 m-top">
             <mat-card >
                 <mat-card-header>
                   <mat-card-title>User Login</mat-card-title>
                 </mat-card-header>
                  <mat-card-content>
-                    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                        <mat-form-field class="example-full-width">
+                    <form 
+                    @slideInOut
+                    [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                        <mat-form-field 
+                        class="example-full-width">
                             <mat-label>Username</mat-label>
                             <input matInput type="text" formControlName="userName">
                           </mat-form-field> 
                           
-                          <mat-form-field class="example-full-width">
+                          <mat-form-field 
+                       
+                          class="example-full-width">
                             <mat-label>Password</mat-label>
                             <input matInput type="password" formControlName="password">
                           </mat-form-field> 
