--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -13,3 +13,11 @@ margin-top:20px;
 .example-full-width {
     width: 100%;
   }
+  .center-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+  }
