--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div 
     
-        class="col-sm-12 col-md-12 col-lg-12 m-top">
+        class="col-sm-12 col-md-12 col-lg-12 center-screen">
             <mat-card >
                 <mat-card-header>
                   <mat-card-title>User Login</mat-card-title>
