--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,9 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; 
+  background-color: #e9ecef;
+  font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .red-snackbar{
     background-color: red !important;
