--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <div class="loading-indicator" *ngIf="spinnerService.visibility | async">
-    <mat-spinner></mat-spinner>
+    <mat-progress-spinner mode="indeterminate" diameter='45' strokeWidth='50'></mat-progress-spinner>
 </div>
 <router-outlet></router-outlet>
