--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -21,3 +21,9 @@ margin-top:20px;
     text-align: center;
     min-height: 100vh;
   }
+  button{
+    position:absolute;
+    top:0;
+    right:0;
+    z-index:10;
+   }
