--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -21,6 +21,14 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>demoapp</span>
+      <span class="example-spacer"></span>
+      <span>Admin User</span>
+      <button
+      type="button"
+      mat-icon-button
+     >
+      <mat-icon aria-label="Side nav toggle icon">account_circle</mat-icon>
+    </button>
     </mat-toolbar>
     <!-- Add Content Here -->
     <div class="container-fluid">
