--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -20,7 +20,7 @@
        >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>demoapp</span>
+      <span class="titleCenter">Demo Application</span>
       <span class="example-spacer"></span>
       <span>Admin User</span>
       <button
@@ -112,6 +112,9 @@
               <app-table></app-table>
             </mat-expansion-panel>
           </mat-accordion>
+        </div>
+        <div  class="col-12 footer">
+             Footer Works
         </div>
       </div>
     </div>
