--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -22,8 +22,18 @@
   flex: 1 1 auto;
   text-align: right;
 }
-.footer{
+.titleCenter1{
   position: absolute;
   bottom: 0px;
+  flex: 1 1 auto;
+  text-align: center;
+}
+.example-icon {
+  padding: 0 14px;
+}
+
+
+.example-spacer {
+  flex: 1 1 auto;
   text-align: center;
 }
