--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,10 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.cdk-overlay-container{
+    top:66.5px;
+}
+.cdk-overlay-connected-position-bounding-box{
+    top:0 !important;
+    
+}
