--- a/src/app/nested/nested.component.html
+++ b/src/app/nested/nested.component.html
@@ -8,9 +8,7 @@
             </a>
           </ng-container>
           <ng-container *ngIf="menuItem.children.length > 0">
-            <button mat-button [matMenuTriggerFor]="levelOne" #levelOneTrigger="matMenuTrigger"
-            (mouseenter)="levelOneTrigger.openMenu()"
-            >
+            <button mat-button [matMenuTriggerFor]="levelOne" #levelOneTrigger="matMenuTrigger">
               <span class="icon fa" [ngClass]="menuItem.icon"></span>
               <span>{{menuItem.label}}
                 <i class="fa fa-chevron-down"></i>
@@ -19,8 +17,6 @@
         
             <mat-menu #levelOne="matMenu" direction="down" yPosition="below">
               <ng-container *ngFor="let childL1 of menuItem.children">
-                <span>
-                <!-- <span (mouseleave)="levelOneTrigger.closeMenu()"> -->
                 <li class="p-0" *ngIf="!childL1.children" mat-menu-item>
                   <a class="nav-link">{{childL1.label}}
                     <i *ngIf="childL1.icon" [ngClass]="childL1.icon"></i>
@@ -31,7 +27,7 @@
                     <span class="icon fa" [ngClass]="childL1.icon"></span>
                     <span>{{childL1.label}}</span>
                   </li>
-                  <mat-menu #levelTwo="matMenu">
+                  <mat-menu #levelTwo="matMenu"  yPosition="below">
                     <ng-container *ngFor="let childL2 of childL1.children">
                       <li class="p-0" mat-menu-item>
                         <a class="nav-link">{{childL2.label}}
@@ -41,7 +37,6 @@
                     </ng-container>
                   </mat-menu>
                 </ng-container>
-              </span>
               </ng-container>
           
             </mat-menu>
