--- a/src/app/nested/nested.component.html
+++ b/src/app/nested/nested.component.html
@@ -8,7 +8,9 @@
             </a>
           </ng-container>
           <ng-container *ngIf="menuItem.children.length > 0">
-            <button mat-button [matMenuTriggerFor]="levelOne" #levelOneTrigger="matMenuTrigger">
+            <button mat-button [matMenuTriggerFor]="levelOne" 
+            (mouseenter)="levelOneTrigger.openMenu()" 
+            #levelOneTrigger="matMenuTrigger">
               <span class="icon fa" [ngClass]="menuItem.icon"></span>
               <span>{{menuItem.label}}
                 <i class="fa fa-chevron-down"></i>
